[package]
name = "raytracer-rs"
version = "0.1.0"
authors = ["kanales <ivancanalestgna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = 'src/lib/mod.rs'
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.23.2", optional = true}
wasm-bindgen = "0.2.60"

[features]
build-binary = ["image"]


[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
    'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]